# gal-keeper

./: .gitignore  .gitmodules  CHANGELOG.md  CNAME  README.ja.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  request.http  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  deploy.yml  release.yml
assets/: index-BQXnVdd4.css  index-BpQQl89Z.css  index-C9RK1x_f.js  index-Cq2z6PeS.js  index-D6TtIzJw.js  index-EQsKx-Ck.js  index-liFxM42m.css
scripts/: common.ts  export.ts  fetch.ts
src/: App.tsx  constant.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: as_crypt.rs  common.rs  database.rs  details.rs  launch.rs  mod.rs  request.rs  sync.rs
src/api/: bgm.ts  github.ts  http.ts  index.ts  mixed.ts  vndb.ts
src/components/AddModal/: index.tsx
src/components/AlertBox/: index.tsx
src/components/ConfirmBox/: index.tsx
src/components/FilterModal/: index.tsx
src/components/GameGrid/: GameCard.tsx  GameGrid.tsx
src/components/GameList/: index.tsx
src/components/GroupModal/: index.tsx
src/components/InsertModal/: index.tsx
src/components/Layout/: Layout.tsx  index.tsx
src/components/Settings/: Settings.tsx
src/components/Sidebar/: Sidebar.tsx  SidebarItem.tsx  index.tsx
src/components/SortModal/: index.tsx
src/components/SyncModal/: index.tsx
src/components/ToastNotification/: index.tsx
src/contexts/: UIContext.tsx
src/data/: games.json
src/locales/: en-US.ts  ja-JP.ts  zh-CN.ts  zh-TW.ts
src/pages/: Detail.tsx  Edit.tsx  GameDetail.tsx  GameLibrary.tsx  Library.tsx  Settings.tsx
src/pages/About/: index.tsx
src/pages/Category/: index.tsx
src/pages/Detail/: index.tsx
src/pages/Edit/: index.tsx
src/pages/Home/: index.tsx
src/pages/Settings/: index.tsx
src/routes/: index.tsx
src/store/: index.ts  main.ts  shared.ts  tauriStorage.ts
src/types/: index.ts  schema.ts  types.ts
src/utils/: ErrorReporter.ts  events.ts  i18n.ts  index.ts  logger.ts  tauriStorage.ts
src/utils/api/: vndb.ts
