[package]
name = "gal-keeper"
version = "0.1.0"
description = "A visual novel manaNNgement, statistics and cloud syncing tool built with Tauri and React"
authors = ["Arimura Sena"]
edition = "2021"
license = "BAN-ZHINESE-USING"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gal_keeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "path-all",
  "dialog-all",
  "window-all",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.12"
base64 = "0.22.1"
winapi = { version = "0.3.9", features = ["winuser"] }
sysinfo = "0.33.1"
uuid = "1.11.0"
sled = "0.34.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
