[package]
name = "gal-keeper"
version = "1.0.1"
description = "A lightweight and fast visual novel management for coders, statistics and cloud syncing tool built with Tauri and React"
authors = ["Arimura Sena"]
edition = "2021"
license = "BAN-ZHINESE-USING"

[lib]
name = "gal_keeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "fs-all",
  "path-all",
  "dialog-all",
  "window-all",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.12"
base64 = "0.22.1"
winapi = { version = "0.3.9", features = ["winuser"] }
sysinfo = "0.33.1"
rusty-leveldb = "3.0.2"
roga = "1.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
